# resumeb

./: .gitignore  AGENTS.md  PLAN-archetype-resumes.md  PLAN-chronology-lock.md  PLAN-lane-config.md  PLAN-pi-context-instructions.md  README-Archetypes.md  README-JobFeed.md  README-linkedin-automation.md  README.md  Russell_Batchelor_CV_Blend.md  Russell_Batchelor_CV_Wireless_Logic_MD_Operations.txt  TODO.md  aggregator.py  archetype-A-cv.json  archetype-B-cv.json  archetype-C-cv.json  archetype-E-cv.json  archetype-d-head-of-ai-operations.txt  audit-wireless-logic-md-ops.md  build-archetype-e.py  career_evidence.json  code_review_todo.md  config.py  coverage-notes-archetype-d.md  cv-tailored-result.md  inject-b.js  interview-evidence-summary.md  interview_questions.json  jobspy_linkedin_scrape.py  lane-config.json  lingui.config.ts  linkedin-content-plan.md  linkedin-seo-plan.md  manual_jobs.json  package.json  plan.md  prioritized_suggestions.json  requirements.txt  research.md  (+7 more)
pi.dev/linkedin-feed/: build_evidence.py  build_master_data.py  build_wifi_cv.py  check_pattern.py  create_resource_component.py  deploy.sh  find_input.py  fix_dedup.py  fix_isconfigured.py  fix_quotes.py  json2md.py  linkedin-feed.service  linkedin-scrape.service  linkedin-scrape.timer  patch_badge_text.py  patch_cantest.py  patch_color.py  patch_evidence.py  patch_input.py  patch_job_detail.py  patch_manual.py  patch_pink.py  patch_pink_card.py  patch_resources.py  patch_rr.py  patch_seen.py  patch_ssr.py  patch_v2.py  patch_working.py  pyproject.toml  scrape.py  scrape_wrapper.sh  server.py  (+1 more)
(+211 files in other folders)
